--- a/my-app/src/CSS/Header.css
+++ b/my-app/src/CSS/Header.css
@@ -1,25 +1,17 @@
 .Header {
     display: flex;
     justify-content: center;
+    background-color: #0F52BA;
+    height: 16vh;
 }
 .headerLogoText{
-    font-size: 48px;
+    font-size: 40px;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
     margin-right: auto;
-    margin-left: 1%;
-    margin-top: 1%;
-}
-.headerTitle {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 30px;
-    margin-left: auto;
-    margin-top: 1%;
+    margin-left: 1.5%;
+    margin-top: 2.5%;
+    color: white;
 }
 
-#databaseSearch {
-    margin-right: 1%;
-}
